<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    tools:context=".DanoMomStatistics.DanoMomStatisticsThree">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/maternal_and_child_mortality_sdg_target_3_1_3_2"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/maternal_mortality_ratio"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp"-->
            <!--android:rotation="-90"-->
            <!--android:text="MMR [100 000 Live births]"-->
            <!--android:textColor="@color/colorBlack"-->
            <!--android:textSize="16sp"-->
            <!--android:textStyle="bold" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_750"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/_500"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/_250"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="0"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorBlack" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/breastfeeding_black_line" />

        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/_2000"
                android:textSize="14sp"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/_2005"
                android:textSize="14sp"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/_2010"
                android:textSize="14sp"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/_2015"
                android:textSize="14sp"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/maternal_nutrition_statistics_of_bangladesh"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/zinc_deficiency_affects_women"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/b12_deficiency"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/deficient_in_folate"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/underweight2"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/anemia"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/low_birth_weight"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View
                    android:layout_width="2dp"
                    android:layout_height="170dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorBlack" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="170dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorBlack" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="170dp"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorBlack" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="170dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorBlack" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:progress="39"
                    android:progressDrawable="@drawable/progressbar_status_yellow5dp"
                    android:rotation="90" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="30dp"
                    android:progress="72"
                    android:progressDrawable="@drawable/progressbar_status_yellow5dp"
                    android:rotation="90" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="55dp"
                    android:progress="51"
                    android:progressDrawable="@drawable/progressbar_status_yellow5dp"
                    android:rotation="90" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="85dp"
                    android:progress="66"
                    android:progressDrawable="@drawable/progressbar_status5dp"
                    android:rotation="90" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="100dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="115dp"
                    android:progress="92"
                    android:progressDrawable="@drawable/progressbar_status5dp"
                    android:rotation="90" />

                <ProgressBar
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="175dp"
                    android:progress="100"
                    android:progressDrawable="@drawable/progressbar_status5dp"
                    android:rotation="90" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="180dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/_20p"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/_40p"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/_60p"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="#DAE150" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children_under_5_years"
                android:textColor="@color/colorBlack" />

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:background="#1CBADA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/women_15_49_years"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>